{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 40,
  "lineage": "288f5c14-734c-2787-fdee-0e65ab691719",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "network-lb-ip-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "104.196.3.22",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-04-26T10:42:32.925-07:00",
            "id": "projects/qwiklabs-gcp-02-4270840ac134/regions/us-east1/addresses/network-lb-ip-1",
            "name": "network-lb-ip-1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "qwiklabs-gcp-02-4270840ac134",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/regions/us-east1/addresses/network-lb-ip-1",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/regions/us-east1/forwardingRules/www-rule"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "web-backend-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/zones/us-east1-b/instanceGroups/lb-backend-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-04-26T11:08:18.898-07:00",
            "enable_cdn": false,
            "fingerprint": "2DOp1OdTMRw=",
            "generated_id": 62849724161775229,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/global/healthChecks/http-basic-check"
            ],
            "id": "projects/qwiklabs-gcp-02-4270840ac134/global/backendServices/web-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-backend-service",
            "port_name": "http",
            "project": "qwiklabs-gcp-02-4270840ac134",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/global/backendServices/web-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.http-basic-check",
            "google_compute_instance_group_manager.lb-backend-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-allow-health-check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-04-26T10:48:58.235-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-02-4270840ac134/global/firewalls/fw-allow-health-check",
            "log_config": [],
            "name": "fw-allow-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/global/networks/default",
            "priority": 1000,
            "project": "qwiklabs-gcp-02-4270840ac134",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/global/firewalls/fw-allow-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-health-check"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "www-firewall-network-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-04-26T10:35:57.413-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-02-4270840ac134/global/firewalls/www-firewall-network-lb",
            "log_config": [],
            "name": "www-firewall-network-lb",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/global/networks/default",
            "priority": 1000,
            "project": "qwiklabs-gcp-02-4270840ac134",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/global/firewalls/www-firewall-network-lb",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "network-lb-tag"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "www-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2023-04-26T10:42:56.033-07:00",
            "id": "projects/qwiklabs-gcp-02-4270840ac134/regions/us-east1/forwardingRules/www-rule",
            "ip_address": "104.196.3.22",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "www-rule",
            "network_tier": "PREMIUM",
            "port_range": "80",
            "project": "qwiklabs-gcp-02-4270840ac134",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/regions/us-east1/forwardingRules/www-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/regions/us-east1/targetPools/www-pool"
          },
          "dependencies": [
            "google_compute_address.network-lb-ip-1",
            "google_compute_http_health_check.basic-check",
            "google_compute_target_pool.www-pool"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "lb-ipv4-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.120.158.64",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-04-26T11:06:10.908-07:00",
            "id": "projects/qwiklabs-gcp-02-4270840ac134/global/addresses/lb-ipv4-1",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "lb-ipv4-1",
            "prefix_length": 0,
            "project": "qwiklabs-gcp-02-4270840ac134",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/global/addresses/lb-ipv4-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http-content-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/qwiklabs-gcp-02-4270840ac134/global/forwardingRules/http-content-rule",
            "ip_address": "34.120.158.64",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-content-rule",
            "port_range": "80",
            "project": "qwiklabs-gcp-02-4270840ac134",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/global/forwardingRules/http-content-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/global/targetHttpProxies/http-lb-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.web-backend-service",
            "google_compute_global_address.lb-ipv4-1",
            "google_compute_health_check.http-basic-check",
            "google_compute_instance_group_manager.lb-backend-group",
            "google_compute_target_http_proxy.http-lb-proxy",
            "google_compute_url_map.web-map-http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http-lb-proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-26T11:08:52.627-07:00",
            "id": "projects/qwiklabs-gcp-02-4270840ac134/global/targetHttpProxies/http-lb-proxy",
            "name": "http-lb-proxy",
            "project": "qwiklabs-gcp-02-4270840ac134",
            "proxy_bind": false,
            "proxy_id": 234354283756443227,
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/global/targetHttpProxies/http-lb-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/global/urlMaps/web-map-http"
          },
          "dependencies": [
            "google_compute_backend_service.web-backend-service",
            "google_compute_health_check.http-basic-check",
            "google_compute_instance_group_manager.lb-backend-group",
            "google_compute_url_map.web-map-http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "web-map-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-26T11:08:40.898-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/global/backendServices/web-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "_69pTfKTaKo=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/qwiklabs-gcp-02-4270840ac134/global/urlMaps/web-map-http",
            "map_id": 5223496042634597959,
            "name": "web-map-http",
            "path_matcher": [],
            "project": "qwiklabs-gcp-02-4270840ac134",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/global/urlMaps/web-map-http",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.web-backend-service",
            "google_compute_health_check.http-basic-check",
            "google_compute_instance_group_manager.lb-backend-group"
          ]
        }
      ]
    },
    {
      "module": "module.ww1",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230411",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/zones/us-east1-b/disks/www1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-02-4270840ac134/zones/us-east1-b/instances/www1",
            "instance_id": "7852801839298043085",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "yHXzonRwLz4=",
            "metadata_startup_script": "apt-get update  \napt-get install apache2 php php-mysql -y\nservice apache2 restart\necho \"\n\u003ch3\u003eWeb Server: www1\u003c/h3\u003e\" | tee /var/www/html/index.html'",
            "name": "www1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.138.8.65",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/global/networks/default",
                "network_ip": "10.142.0.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/regions/us-east1/subnetworks/default",
                "subnetwork_project": "qwiklabs-gcp-02-4270840ac134"
              }
            ],
            "project": "qwiklabs-gcp-02-4270840ac134",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/zones/us-east1-b/instances/www1",
            "service_account": [
              {
                "email": "291875131102-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "network-lb-tag"
            ],
            "tags_fingerprint": "9GVlO4gPawg=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "module.ww1.data.google_compute_default_service_account.default"
          ]
        }
      ]
    },
    {
      "module": "module.ww2",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230411",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/zones/us-east1-b/disks/www2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-02-4270840ac134/zones/us-east1-b/instances/www2",
            "instance_id": "8548119197268631057",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "24xhcIYw1Po=",
            "metadata_startup_script": "apt-get update  \napt-get install apache2 php php-mysql -y\nservice apache2 restart\necho \"\n\u003ch3\u003eWeb Server: www2\u003c/h3\u003e\" | tee /var/www/html/index.html'",
            "name": "www2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.73.33.243",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/global/networks/default",
                "network_ip": "10.142.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/regions/us-east1/subnetworks/default",
                "subnetwork_project": "qwiklabs-gcp-02-4270840ac134"
              }
            ],
            "project": "qwiklabs-gcp-02-4270840ac134",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/zones/us-east1-b/instances/www2",
            "service_account": [
              {
                "email": "291875131102-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "network-lb-tag"
            ],
            "tags_fingerprint": "9GVlO4gPawg=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "module.ww2.data.google_compute_default_service_account.default"
          ]
        }
      ]
    },
    {
      "module": "module.ww3",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230411",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/zones/us-east1-b/disks/www3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-02-4270840ac134/zones/us-east1-b/instances/www3",
            "instance_id": "8098275609859644945",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "zlxt3n4dMSQ=",
            "metadata_startup_script": "apt-get update  \napt-get install apache2 php php-mysql -y\nservice apache2 restart\necho \"\n\u003ch3\u003eWeb Server: www3\u003c/h3\u003e\" | tee /var/www/html/index.html'",
            "name": "www3",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.139.85.114",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/global/networks/default",
                "network_ip": "10.142.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/regions/us-east1/subnetworks/default",
                "subnetwork_project": "qwiklabs-gcp-02-4270840ac134"
              }
            ],
            "project": "qwiklabs-gcp-02-4270840ac134",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-02-4270840ac134/zones/us-east1-b/instances/www3",
            "service_account": [
              {
                "email": "291875131102-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "network-lb-tag"
            ],
            "tags_fingerprint": "9GVlO4gPawg=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "module.ww3.data.google_compute_default_service_account.default"
          ]
        }
      ]
    }
  ]
}